--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "sum-any",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Sum any array or Array of objects",
   "main": "index.js",
+  "repository": "https://github.com/fshrabon151/sum-any",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
